--- a/template/package.json
+++ b/template/package.json
@@ -82,7 +82,7 @@
 {{/if_eq}}
   "dependencies": {
     "electron-is-dev": "^2.0.0",
-    "vue": "^2.6.14"{{deps plugins}}
+    "vue": "^2.6.14"{{deps plugins pluginsFrontend}}
   },
   "devDependencies": {
     "ajv": "^6.5.0",
